hphp/test/slow/hhbbc/ns_resolve_failure.php.expectf
Fatal error: Call to undefined function Sup\hohoho() in %s/slow/hhbbc/ns_resolve_failure.php on line 6
